<!--
  ~ Copyright (C) 2017 Emmanuel Kehinde
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Lolo</string>
    <string name="tweet_url">Url here</string>
    <string name="download_video">Download</string>
    <string name="filename_optional">Filename</string>
    <string name="tap_like">Show Me some likes by tapping the \'LIKE\' Button.</string>
    <string name="hope_like">Hope you like it.</string>
    <string name="thank_you">Thank you for using Lolo</string>
    <string name="about_twittersave">About Lolo</string>
    <string name="about">This Application Helps in Downloading videos from Twitter or YouTube Applications. Once you have clicked the share button and selected Lolo, Just Confirm Your Notifications</string>
    <string name="_1_copy_the_tweet_url_of_the_tweet_containing_the_video_or_animated_gif_then_paste_it_into_the_tweet_url_box_enter_the_name_you_want_it_stored_with_optional_then_tap_the_download_button_enjoy">Copy the tweet url of the tweet containing the video or animated gif. Then paste it into the tweet url box. Enter the name you want it stored with (optional). Then tap the \'Download\' button. Enjoy!!!</string>
    <string name="select_share_tweet_via_option_from_the_specific_tweet_options_then_select_twittersave_app_from_the_list_of_apps_the_tweet_url_is_automatically_inserted_into_the_tweet_url_box_enter_the_name_you_want_it_stored_with_optional_then_tap_the_download_button_enjoy">Select \'Share Tweet via…\' option from the (specific) tweet options. Then select TwittaSave app from the list of apps (The tweet url is automatically inserted into the tweet url box). Enter the name you want it stored with (optional). Then tap the \'Download\' button. Enjoy!!!</string>
    <string name="mfuon_twitter">Twitter</string>
    <string name="mfuon_facebook">Facebook</string>
    <string name="mfuon_review">Give a Review/Rate</string>
    <string name="enable_disable_autolisten">Listener For Twitter</string>
    <string name="enable_autolisten_using_the_switch_below_the_download_button_from_the_twitter_app_simply_select_copy_link_to_tweet_option_from_the_tweet_containing_the_video_or_gif_twittasave_automatically_handles_the_download_of_the_video_or_animated_gif">Enable AutoListen using the Switch below the Download Button. From the Twitter app, simply select \'Copy link to tweet\' option from the tweet containing the video or gif. TwittaSave automatically handles the download of the video or animated gif.</string>
    <string name="general_channel">General Channel</string>
    <string name="textview">I grab YouTube and Twitter Videos Only but Very Soon I will Grab Facebook Too</string>
    <string name="listening_mode">Copy Links for Automatic Downloads By Lolo. It will Happen in Background. Check notifications Thank You..!!</string>
    <string name="listening_mode_off">If you are on Twitter or Youtube Share video with Lolo to Download. Check Notifications After</string>
    <string name="error_no_yt_link">Not a valid YouTube link!</string>
    <string name="text_view_resolution">Select A Prefered Resolution</string>
    <string name="youtubeLink">YouTube Link</string>
    <string name="twitterLink">Twitter Link</string>
    <string name="reviewLink">Review Link</string>
    <string name="invalidLink">Invalid Twitter or Youtube Link</string>
    <string name="what_i_do">About Lolo</string>
    <string name="versioning">Application Version v1.0 - Stable</string>
    <string name="realest">Follow Me Here</string>
</resources>
