<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    tools:context="com.ki.leo.activities.MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="73dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/swt_autolisten"
        android:layout_toStartOf="@+id/swt_autolisten"
        android:text="@string/enable_disable_autolisten"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="10sp" />

    <Switch
        android:id="@+id/swt_autolisten"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="14dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="349dp"
            android:layout_height="126dp"
            android:src="@mipmap/ic_l"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="279dp"
            android:layout_height="73dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:fontFamily="@font/atma_light" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/txt_tweet_url"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textUri"
                android:textAlignment="center"
                android:textColorHint="@color/tw__composer_light_gray" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/txt_filename"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_download"
            android:layout_width="183dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:background="@drawable/btn_round2"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/download_video"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/tw__composer_red"
            android:textSize="10sp"
            app:fontFamily="@font/atma_light" />

        <Button
            android:id="@+id/btn_about_app"
            android:layout_width="178dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:background="@drawable/btn_round2"
            android:text="@string/about_twittersave"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>


</android.support.constraint.ConstraintLayout>
